Refactor Next.js Configuration and TypeScript Settings
- Removed deprecated settings from next.config.mjs, including SWC minification and console log removal.
- Updated experimental features to enhance build performance with new parallel options.
- Cleaned up tsconfig.json by removing unnecessary exclusions and TypeScript options.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,6 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "verbatimModuleSyntax": true,
-    "allowImportingTsExtensions": true,
     "plugins": [
       {
         "name": "next"
@@ -25,5 +23,5 @@
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules", ".next", "out"]
+  "exclude": ["node_modules"]
 }
